--- a/tensorboard/code/part_2/requirements.txt
+++ b/tensorboard/code/part_2/requirements.txt
@@ -1,3 +1,37 @@
-clusterone
-opencv-python==3.4.0.12
+absl-py==0.2.0
+astor==0.6.2
+bleach==1.5.0
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+click-log==0.1.8
+clusterone==0.10.8
+coreapi==2.3.3
+coreapi-cli==1.0.6
+coreschema==0.0.4
+gast==0.2.0
+gitdb2==2.0.3
+GitPython==2.1.9
+grpcio==1.11.0
+html5lib==0.9999999
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+Markdown==2.6.11
+MarkupSafe==1.0
 numpy==1.14.0
+opencv-python==3.4.0.12
+protobuf==3.5.2.post1
+py==1.5.3
+raven==6.7.0
+requests==2.18.4
+six==1.11.0
+smmap2==2.0.3
+tensorboard==1.7.0
+tensorflow==1.7.0
+termcolor==1.1.0
+terminaltables==3.1.0
+uritemplate==3.0.0
+urllib3==1.22
+virtualenv==15.2.0
+Werkzeug==0.14.1
